@@ -18,24 +18,37 @@
 
 # This file is used to generate the annotation of package info that
 # records the user, url, revision and timestamp.
-#
-# Copied from hadoop.
+
+# Copied from hadoop core r740386
+
 unset LANG
 unset LC_CTYPE
 version=$1
-if [[ -d .svn ]]; then
-  revision=`svn info | sed -n -e 's/Last Changed Rev: \(.*\)/\1/p'`
-  url=`svn info | sed -n -e 's/URL: \(.*\)/\1/p'`
-elif [[ -d .git ]]; then
-  revision=`git rev-list --max-count=1 HEAD`
-  url=`git config --get remote.origin.url`
-fi
 user=`whoami`
 date=`date`
+cwd=`pwd`
+if [ -d .svn ]; then
+  revision=`svn info | sed -n -e 's/Last Changed Rev: \(.*\)/\1/p'`
+  url=`svn info | sed -n -e 's/URL: \(.*\)/\1/p'`
+  # Get canonical branch (branches/X, tags/X, or trunk)
+  branch=`echo $url | sed -n -e 's,.*\(branches/.*\)$,\1,p' \
+                             -e 's,.*\(tags/.*\)$,\1,p' \
+                             -e 's,.*trunk$,trunk,p'`
+elif [ -d .git ]; then
+  revision=`git log -1 --pretty=format:"%H"`
+  hostname=`hostname`
+  branch=`git branch | sed -n -e 's/^* //p'`
+  url="git://${hostname}${cwd}"
+else
+  revision="Unknown"
+  branch="Unknown"
+  url="file://$cwd"
+fi
 mkdir -p build/src/org/apache/hadoop/hbase
 cat << EOF | \
   sed -e "s/VERSION/$version/" -e "s/USER/$user/" -e "s/DATE/$date/" \
       -e "s|URL|$url|" -e "s/REV/$revision/" \
+      -e "s|BRANCH|$branch|" \
       > build/src/org/apache/hadoop/hbase/package-info.java
 /*
  * Generated by src/saveVersion.sh
