@@ -15,6 +15,8 @@ Release 0.20.0 - Unreleased
                sync (temporary until HADOOP-4379 is resolved)
    HBASE-1121  Cluster confused about where -ROOT- is
    HBASE-1148  Always flush HLog on root or meta region updates
+   HBASE-1181  src/saveVersion.sh bails on non-standard Bourne shells (e.g. dash)
+               (K M via Jean-Daniel Cryans)
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
